@@ -491,6 +491,7 @@ type
     function withRoamingProfiles: boolean;
     function linuxAgentActivated: boolean;
     function isConnected: boolean;
+    function isConnected2(loglist : TStringlist): boolean;
     function getMapOfLoginscripts2Run(allscripts: boolean): TStringList;
     function getMapOfProductActionRequests: TStringList;
     function getFileFromDepot(filename: string; toStringList: boolean;
@@ -3016,6 +3017,49 @@ begin
     omc.Free;
   end;
 end;
+
+function TOpsi4Data.isConnected2(loglist : TStringlist): boolean;
+var
+  omc: TOpsiMethodCall;
+begin
+  Result := False;
+  FOpsiInformation := nil;
+  if FOpsiInformation = nil then
+  begin
+    try
+    loglist.Append('Starting Servicecall: backend_info');
+    omc := TOpsiMethodCall.Create('backend_info', []);
+    if omc <> nil then
+    begin
+      try
+        FOpsiInformation := FjsonExecutioner.retrieveJsonObject(omc);
+        if (FOpsiInformation <> nil) and (FOpsiInformation.O['result'] <>
+          nil) then
+        begin
+          Result := True;
+          loglist.Append('Success Servicecall: backend_info');
+        end
+        else
+          loglist.Append('Problem getting backend_info from service');
+      except
+        loglist.Append('Exeception getting backend_info from service');
+      end;
+    end
+    else
+      loglist.Append('Problem creating OpsiMethodCall backend_info');
+
+    except
+      on e: exception do
+      Begin
+        loglist.Append('Exception in isConnected2: '
+                       + e.message +' '+ DateTimeToStr(Now));
+        Result := False;
+      End;
+    end;
+    if Assigned(omc) then omc.Free;
+  end;
+end;
+
 
 
 function TOpsi4Data.linuxAgentActivated: boolean;
