@@ -4,6 +4,13 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.0.25) stable; urgency=low
+
+  * osconf: readConfigFromService: more debug and try-except with
+  * oswebservice: function isConnected2(loglist : TStringlist): boolean;
+
+-- Detlef Oertel <d.oertel@uib.de>  Tue, 17 Jul 2018:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.0.24) stable; urgency=low
 
   * osconf: readConfigFromService: more debug and try-except
